--- a/components/layout/header/header.module.css
+++ b/components/layout/header/header.module.css
@@ -1,1 +1,21 @@
+.wrapper {
+    max-width: var(--max-width);
+    margin: 0 auto;
+    padding: 30px 0;
+}
 
+.logo {
+    font-size: 2.2rem;
+    font-weight: 900;
+    color: var(--black);
+}
+
+.fontSizeDown {
+    font-size: 2rem;
+}
+
+.mp_letterStyle {
+    letter-spacing: -1.5px;
+    display: inline-block;
+    margin-right: 0.6px;
+}
