--- a/components/page/blog/blog.module.css
+++ b/components/page/blog/blog.module.css
@@ -38,3 +38,36 @@
 .posting_title:hover {
     color: rgb(var(--orange));
 }
+
+/* 👀 PostTag css */
+.posting .tag_box {
+    max-width: fit-content;
+    padding: 2px 10px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.posting .tag_box .circle {
+    width: 13.5px;
+    height: 13.5px;
+    border-radius: 50%;
+    margin-left: -5px;
+}
+
+.posting .tag_box .tag_text {
+    padding-bottom: 2px;
+    color: var(--black);
+    font-size: 14px;
+    margin-left: 5px;
+}
+
+.tag_box.react_box {
+    background-color: #c8f0ff;
+    border: 0.5px solid #52cffc4a;
+}
+
+.tag_box .react_circle {
+    background-color: #52cffc;
+}
