--- a/components/page/blog/blog.module.css
+++ b/components/page/blog/blog.module.css
@@ -1,48 +1,57 @@
 .wrapper {
     max-width: var(--max-width);
     margin: 0 auto;
+    padding-bottom: 120px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 20px;
 }
 
 /* 👀 GetPostContent css */
 .posting {
-    width: calc(1400px / 3 - 20px);
-    height: 300px;
-    min-height: 200px;
+    width: calc(1500px / 3 - 14px);
+    height: fit-content;
     background-color: #ffffff;
-    padding: 30px;
     display: flex;
     flex-direction: column;
     border: 1px solid #0000001b;
-    border-radius: 20px;
 }
 
-.posting .posting_contents {
-    height: 100%;
-    margin-top: 12px;
+.posting .image_box {
+    width: 100%;
+    height: 300px;
+    min-height: 300px;
+    overflow: hidden;
+    margin: 0 auto;
     position: relative;
 }
 
-.posting .posting_contents .posting_title {
-    font-size: 1.8rem;
+.posting .posting_contents {
+    position: relative;
+    padding: 10px 20px 20px;
+}
+
+.posting .posting_contents a .posting_title {
+    margin-top: 6px;
+    font-size: 1.6rem;
     font-weight: 900;
     line-height: 1.3;
-    word-spacing: 4px;
-    letter-spacing: 1px;
+    word-spacing: 2px;
     word-wrap: break-word;
 }
 
-.posting_title:hover {
+.posting .posting_contents .summary {
+    font-size: 0.88rem;
+}
+
+.posting .posting_contents:hover .posting_title {
     color: rgb(var(--orange));
 }
 
 /* 👀 PostTag css */
 .posting .tag_box {
     max-width: fit-content;
-    padding: 2px 10px;
+    padding: 2px 12px;
     border-radius: 20px;
     display: flex;
     justify-content: center;
@@ -50,8 +59,8 @@
 }
 
 .posting .tag_box .circle {
-    width: 13.5px;
-    height: 13.5px;
+    width: 10px;
+    height: 10px;
     border-radius: 50%;
     margin-left: -5px;
 }
@@ -59,7 +68,7 @@
 .posting .tag_box .tag_text {
     padding-bottom: 2px;
     color: var(--black);
-    font-size: 14px;
+    font-size: 11px;
     margin-left: 5px;
 }
 
