--- a/components/page/posting/posting.module.css
+++ b/components/page/posting/posting.module.css
@@ -1,13 +1,17 @@
 .wrapper {
-    max-width: 800px;
+    max-width: 1100px;
     min-height: 100vh;
     margin: 0 auto;
+    padding-bottom: 120px;
 }
 
 .title {
-    font-size: 4rem;
+    font-size: 6rem;
     font-weight: 900;
+    line-height: 1.6;
+    word-spacing: 12px;
     word-break: keep-all;
+    font-family: var(--font-mona);
     color: var(--black);
-    -webkit-text-stroke: 1px var(--black);
+    -webkit-text-stroke: 2.4px var(--black);
 }
