--- a/style/tag.css
+++ b/style/tag.css
@@ -2,28 +2,29 @@
     display: flex;
     align-items: center;
     max-width: fit-content;
-    padding: 5px 12px;
+    padding: 8px 0 7px;
     border-radius: 50px;
-    max-height: 23px;
-    margin-bottom: 5px;
+    max-height: 30px;
+    margin-bottom: 8px;
 }
 
 .tag_circle {
-    width: 8px;
-    height: 8px;
+    width: 13px;
+    height: 13px;
     border-radius: 50%;
-    margin-left: -5px;
+    margin-left: 10px;
     background-color: #fff;
 }
 
 .tag_text {
     padding-top: 1px;
     font-family: var(--font-mona);
-    font-size: 11px;
-    letter-spacing: 1px;
-    margin-left: 5px;
+    font-size: 12px;
+    font-weight: 900;
+    letter-spacing: 0.2px;
+    margin: 0 13px 0 5px;
     color: #fff;
-    text-transform: capitalize;
+    text-transform: uppercase;
 }
 
 /* JS tag */
