--- a/style/globals.css
+++ b/style/globals.css
@@ -1,73 +1,82 @@
 :root {
-    --max-width: 1400px;
+  --max-width: 1500px;
 
-    /* COLOR */
-    --main: #f26052;
-    --black: #434343;
-    --grey: #f2f2f2;
-    --dark-grey: #ccccd2;
-    --green: #02a676;
-    --red: #f24b4b;
-    --orange: 241, 152, 88;
+  /* COLOR */
+  --main: #02a676;
+  --black: #434343;
+  --grey: #f2f2f2;
+  --dark-grey: #ccccd2;
+  --light-grey: #ababab;
+  --green: #02a676;
+  --red: #f24b4b;
+  --orange: 241, 152, 88;
 
-    /* TAG COLOR */
-    --react-color: 23, 186, 245;
-    --js-color: 246, 219, 26, 1;
+  /* TAG COLOR */
+  --react-color: 23, 186, 245;
+  --js-color: 246, 219, 26;
+  --js: 245, 193, 27;
 
-    /* HIGHLIGHT COLOR */
-    --highlight-green: #e4ff19;
+  /* HIGHLIGHT COLOR */
+  --highlight-green: 101, 194, 148;
 
-    /* HIGHLIGHTBOX COLOR */
-    --highlight-box-green: #fbfff2;
+  /* MARGIN & PADDING SIZE */
+  --size-smaller: 4rem;
+  --size-small: 6rem;
+  --size-normal: 8rem;
+  --size-big: 10rem;
 
-    /* MARGIN & PADDING SIZE */
-    --size-smaller: 4rem;
-    --size-small: 6rem;
-    --size-normal: 8rem;
-    --size-big: 10rem;
+  --primary-glow: conic-gradient(
+    from 180deg at 50% 50%,
+    #16abff33 0deg,
+    #0885ff33 55deg,
+    #54d6ff33 120deg,
+    #0071ff33 160deg,
+    transparent 360deg
+  );
+  --secondary-glow: radial-gradient(
+    rgba(255, 255, 255, 1),
+    rgba(255, 255, 255, 0)
+  );
 
-    --primary-glow: conic-gradient(
-        from 180deg at 50% 50%,
-        #16abff33 0deg,
-        #0885ff33 55deg,
-        #54d6ff33 120deg,
-        #0071ff33 160deg,
-        transparent 360deg
-    );
-    --secondary-glow: radial-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-
-    --tile-border: conic-gradient(#00000080, #00000040, #00000030, #00000020, #00000010, #00000010, #00000080);
+  --tile-border: conic-gradient(
+    #00000080,
+    #00000040,
+    #00000030,
+    #00000020,
+    #00000010,
+    #00000010,
+    #00000080
+  );
 }
 
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: var(--font-line);
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: var(--font-line);
 }
 
 html,
 body {
-    max-width: 100vw;
+  max-width: 100vw;
 }
 
 body {
-    background-color: #00000006;
-    /* background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)); */
+  /* background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)); */
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 button {
-    background-color: transparent;
-    border: none;
+  background-color: transparent;
+  border: none;
 }
 
 code span {
-    font-family: var(--font-proggy);
+  font-family: var(--font-proggy);
 }
 
 /* @media (prefers-color-scheme: dark) {
