--- a/style/globals.css
+++ b/style/globals.css
@@ -15,7 +15,6 @@
     --react-color: 23, 186, 245;
     --js-color: 246, 219, 26;
     --js: 245, 193, 27;
-
     --web-gradient: radial-gradient(
         328px at 2.9% 15%,
         rgb(191, 224, 251) 0%,
@@ -25,6 +24,7 @@
         rgb(240, 251, 244) 100.7%
     );
     --web-color: 180, 224, 255;
+    --package: 151, 150, 240;
 
     /* HIGHLIGHT COLOR */
     --highlight-green: 101, 194, 148;
@@ -34,18 +34,6 @@
     --size-small: 6rem;
     --size-normal: 8rem;
     --size-big: 10rem;
-
-    --primary-glow: conic-gradient(
-        from 180deg at 50% 50%,
-        #16abff33 0deg,
-        #0885ff33 55deg,
-        #54d6ff33 120deg,
-        #0071ff33 160deg,
-        transparent 360deg
-    );
-    --secondary-glow: radial-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-
-    --tile-border: conic-gradient(#00000080, #00000040, #00000030, #00000020, #00000010, #00000010, #00000080);
 }
 
 * {
@@ -58,10 +46,6 @@
 html,
 body {
     max-width: 100vw;
-}
-
-body {
-    /* background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)); */
 }
 
 a {
