--- a/components/page/blog/blog.module.css
+++ b/components/page/blog/blog.module.css
@@ -52,11 +52,11 @@
 }
 
 .keywords_box p {
-    font-size: 1rem;
+    font-size: 0.88rem;
     border-radius: 20px;
     padding: 3px 16px;
-    color: var(--dark-grey);
-    border: 1px solid var(--light-grey);
+    color: var(--black);
+    border: 1.6px solid var(--light-grey);
     font-weight: 900;
 }
 
