--- a/components/page/posting/style/maincategory_prop.css
+++ b/components/page/posting/style/maincategory_prop.css
@@ -37,22 +37,26 @@
     background-color: rgba(var(--web-color), 0.2);
 }
 
-/* ⭐️ PACKAGE MDX ⭐️ */
+.web .highlight_box > strong {
+    background-color: rgba(var(--web-color), 0.2);
+}
 
+/* ⭐️ PACKAGE MDX ⭐️ */
 #mdx.package ol > li:hover::before {
     border: 1px solid rgb(var(--package));
     color: rgb(var(--package));
     -webkit-text-stroke: 1px rgb(var(--package));
 }
 
-.package .sub_contents h5 {
+.package h5 {
     background-color: rgba(var(--package), 0.5);
 }
 
 .package strong {
-    color: rgba(var(--package), 1);
+    background-color: rgba(var(--package), 0.8);
+    color: #fff;
 }
 
 .package .highlight_box {
-    background-color: rgba(var(--package), 0.2);
+    background-color: rgba(var(--package), 0.12);
 }
