--- a/style/blog/blog.module.css
+++ b/style/blog/blog.module.css
@@ -1,7 +1,7 @@
 .wrapper {
     max-width: var(--max-width);
     margin: 0 auto;
-    padding-bottom: 120px;
+    padding-bottom: 100px;
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
@@ -9,44 +9,37 @@
 
 /* 👀 GetPostContent css */
 .blog {
-    width: calc(var(--max-width) / 2 - 30px);
-    height: fit-content;
+    width: calc(var(--max-width) / 3 - 30px);
+    min-height: 400px;
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
     border: 1px solid #0000001b;
     border-radius: 10px;
-    padding: 10px 30px 30px;
+    padding: 30px;
     position: relative;
     transition: all 0.25s;
 }
-
-.blog a .blog_title {
-    font-size: 4rem;
-    font-family: var(--font-mona);
-    font-weight: 900;
-    line-height: 1.3;
-    word-spacing: 3px;
-    word-break: keep-all;
-    margin: 1rem 0;
-    color: var(--black);
-    -webkit-text-stroke: 1px var(--black);
-}
-
-.blog a .blog_title.KR {
-    -webkit-text-stroke: 2px var(--black);
-    font-size: 4.1rem;
-    word-spacing: 0px;
-}
-
 .blog:hover {
     border: 1px solid var(--dark-grey);
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.05), -1px -1px 5px rgba(0, 0, 0, 0.05);
 }
 
+.blog_title {
+    font-size: 3rem;
+    line-height: 1.3;
+    word-spacing: 3px;
+    word-break: keep-all;
+    margin: 0.5rem 0;
+    color: var(--black);
+    -webkit-text-stroke: 2px var(--black);
+}
+
 /* 👀 GetKeyword css */
 .keywords_box {
+    margin-top: 20px;
     display: flex;
+    flex-wrap: wrap;
     gap: 0.6rem;
     align-items: center;
 }
@@ -54,7 +47,7 @@
 .keywords_box p {
     font-size: 0.88rem;
     border-radius: 20px;
-    padding: 3px 16px;
+    padding: 2.5px 12px;
     color: var(--black);
     border: 1.6px solid var(--light-grey);
     font-weight: 900;
