--- a/style/posting/posting.module.css
+++ b/style/posting/posting.module.css
@@ -4,6 +4,9 @@
     margin: 70px auto;
     padding-bottom: 120px;
 }
+.wrapper::-webkit-scrollbar {
+    display: none;
+}
 
 .title_box {
     display: flex;
