--- a/style/globals.css
+++ b/style/globals.css
@@ -32,6 +32,9 @@ html,
 body {
     max-width: 100vw;
 }
+body::-webkit-scrollbar {
+    display: none;
+}
 
 a {
     color: inherit;
@@ -41,6 +44,7 @@ a {
 button {
     background-color: transparent;
     border: none;
+    cursor: pointer;
 }
 
 code span {
