--- a/style/search/search.css
+++ b/style/search/search.css
@@ -1,4 +1,4 @@
-/* SEARCH ICON */
+/* SEARCH */
 .search_button {
     display: flex;
     align-items: center;
@@ -6,7 +6,7 @@
     border-radius: 50%;
     width: 38px;
     height: 38px;
-    color: rgb(220, 220, 220);
+    color: rgb(162, 162, 162);
     transition: color 0.2s;
 }
 .search_button:hover {
@@ -17,11 +17,10 @@
 .search_modal-box {
     width: 600px;
     padding: 20px;
-    z-index: 2000;
+    z-index: 20;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
+    right: 0;
+    margin: 66px 100px 0 0;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2), -2px -2px 6px rgba(0, 0, 0, 0.2);
@@ -32,13 +31,16 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 10px;
 }
 
 #search_input {
     display: inline-block;
     border: none;
     outline: none;
-    font-size: 18px;
+    font-size: 16px;
+    flex-grow: 2;
+    letter-spacing: 0.2px;
 }
 
 .modal_search {
@@ -50,4 +52,21 @@
 }
 .modal_close:hover {
     color: #000;
+}
+
+/* SEARCH LIST */
+.modal_list {
+    list-style: none;
+}
+
+.modal_item {
+    margin: 14px 0 0;
+    font-weight: 700;
+    font-size: 20px;
+    padding: 8px;
+}
+
+.modal_item a {
+    display: inline-block;
+    margin-left: 10px;
 }
