--- a/style/posting/mdx.css
+++ b/style/posting/mdx.css
@@ -4,6 +4,7 @@
 
 .posting_wrapper > p {
     font-size: 1.12em;
+    line-height: 1.7;
 }
 
 .posting_wrapper > h2 {
@@ -11,22 +12,39 @@
     font-size: 3rem;
     -webkit-text-stroke: 3px;
     letter-spacing: 1.4px;
-    margin-bottom: 7rem;
+    margin-bottom: 4rem;
+}
+
+.posting_wrapper > h2:first-of-type {
+    margin-top: 5rem;
+}
+
+.posting_wrapper pre code {
+    padding: 10px;
+    background-color: rgb(53, 51, 48) !important;
+    white-space: pre-wrap;
+    margin: 8px 0;
+}
+
+/* ✨ H2 COMP KOR */
+#h2_ko {
+    -webkit-text-stroke: 2px;
 }
 
 .posting_wrapper h4 {
 }
 
+/* ✨ FLEX BOX */
 #flex_box {
     display: flex;
     gap: 50px;
-    margin: 10rem 0;
+    margin: 6rem 0;
 }
 #flex_box > *:nth-child(1) {
-    width: 30%;
+    width: 28%;
 }
 #flex_box > *:nth-child(2) {
-    width: 70%;
+    width: 72%;
 }
 
 #flex_box ul li {
@@ -34,7 +52,25 @@
     line-height: 1.6;
 }
 
-#flex_box h4 {
+#flex_box ul li ul li {
+    margin-left: 20px;
+    line-height: 1.6;
+}
+#flex_box ul li ul li:last-of-type {
+    margin-bottom: 8px;
+}
+
+#flex_box ol {
+    margin-top: 12px;
+}
+
+#flex_box ol li {
+    list-style-position: inside;
+    line-height: 1.6;
+    margin: 8px 0;
+}
+
+#flex_box > h4 {
     font-size: 1.4em;
     -webkit-text-stroke: 0.4px;
     word-break: keep-all;
@@ -47,15 +83,26 @@
 }
 
 #flex_box p {
-    text-indent: 8px;
     margin: 2rem 0;
     line-height: 1.7;
 }
-#flex_box p:nth-of-type(1) {
+#flex_box p:first-of-type {
     margin: 0;
 }
 
-#flex_box .flex_item code {
+/* ✨ FLEX ITEM */
+#flex_item > h4 {
+    font-size: 1.4em;
+    -webkit-text-stroke: 0.4px;
+    word-break: keep-all;
+    line-height: 1.3;
+    margin: 50px 0 8px;
+}
+#flex_item > h4:first-of-type {
+    margin: 0 0 8px;
+}
+
+#flex_item code {
     background-color: rgb(226, 228, 230);
     padding: 4px;
     border-radius: 0;
@@ -64,7 +111,69 @@
     color: rgb(255, 98, 98);
 }
 
+#flex_item pre code {
+    padding: 10px;
+    background-color: rgb(53, 51, 48) !important;
+    white-space: pre-wrap;
+    margin: 8px 0;
+}
+
+div[data-rehype-pretty-code-fragment] ~ p {
+    margin: 8px 0 !important;
+}
+
+div[data-rehype-pretty-code-fragment]:last-of-type + p {
+    margin: 8px 0 2rem !important;
+}
+
+#flex_item p strong {
+    font-size: 1.1em;
+}
+
+#flex_item h4 + p {
+    margin: 0;
+}
+
+#flex_item h5 {
+    font-size: 1.1em;
+    margin-bottom: 6px;
+    color: var(--dark-grey);
+    -webkit-text-stroke: 0.2px;
+    text-shadow: 1px 1px 1px #0000000b, -1px -1px 1px #0000000b;
+}
+
+#flex_item h5 + p {
+    margin: 0;
+}
+
+/* ✨ HIGHLIGHT */
 #highlight {
-    color: var(--main);
+    color: var(--red);
     font-size: 1.02em;
+}
+
+#highlight_box {
+    padding: 18px;
+    background-color: #f1df3f1b;
+    margin: 1rem 0;
+}
+
+#highlight_box P {
+    margin: 1rem 0;
+    line-height: 1.6;
+}
+
+#highlight_box h4 {
+    font-size: 1.15rem;
+    margin-bottom: 8px;
+}
+
+#highlight_box ul li {
+    list-style-position: inside;
+    line-height: 1.6;
+}
+
+#highlight_box ul li ul li {
+    margin-left: 20px;
+    line-height: 1.6;
 }
